# RP_Auditory_Coding

./: .gitignore  README.md  TIMIT_test_local_rp.tsv  TIMIT_train_local_rp.tsv  TIMIT_train_local_rp_half.tsv  kernel_learning.jl  mushra_results.csv  pyproject.toml  reconstruction_dataset.tsv
CarneyEarlabRevcorData/: 86065u1-2-70.ascii  86065u1-2-70.mat  86065u1-2-80.ascii  86065u1-2-80.mat  86065u12-1-60.mat  86065u12-1-60.txt  86065u12-1-80.ascii  86065u12-1-80.mat  86065u15-1-60.ascii  86065u15-1-60.mat  86065u15-1-80.ascii  86065u15-1-80.mat  86065u16-1-60.ascii  86065u16-1-60.mat  86065u16-1-80.ascii  86065u16-1-80.mat  86065u17-1-60.mat  86065u17-1-60.txt  86065u17-1-80.mat  86065u17-1-80.txt  86065u19-1-60.mat  86065u19-1-60.txt  86065u19-1-80.ascii  86065u19-1-80.mat  86065u2-1-60.mat  86065u2-1-60.txt  86065u2-1-70.ascii  86065u2-1-70.mat  86065u2-1-80.ascii  86065u2-1-80.mat  86065u21-1-60.ascii  86065u21-1-60.mat  86065u21-1-80.ascii  86065u21-1-80.mat  86065u22-1-60.ascii  86065u22-1-60.mat  86065u22-1-80.ascii  86065u22-1-80.mat  86065u24-4-50.mat  86065u24-4-50.txt  (+2235 more)
FUenvironment/: Manifest.toml  Project.toml
Listening_Test_Audio/: spike_counts.csv
MPenvironment/: Manifest.toml  Project.toml
ParEnvironment/: Manifest.toml  Project.toml
ResultsTIMIT_Baseline_128/: epoch_1.jld2  epoch_2.jld2  epoch_3.jld2  epoch_4.jld2  epoch_5.jld2  epoch_6.jld2  health_summary_epoch6.txt  initial_setup_cc58e02c-2076-4d8b-942e-2fa74f930b08.jld2  kernel_details_epoch6.csv  kernels_it0.jld2  kernels_it1000.jld2  kernels_it10000.jld2  kernels_it10500.jld2  (+53 more)
(+792 files in other folders)
