[project]
name = "auditorykernel-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "emd>=0.8.1",
    "h5py>=3.16.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pesq>=0.0.4",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
